# parsec

./: .dockerdevignore  .dockerignore  .gitignore  .vimrc  Dockerfile  README.md
docker/: dev  prod
dockerfile/: dev  prod
pkgs/apps/blackscholes/src/: README
pkgs/apps/bodytrack/src/TrackingBenchmark/threads/: Barrier.cpp  Barrier.h  Condition.cpp  Condition.h  Mutex.cpp  Mutex.h  RWLock.cpp  RWLock.h  SynchQueue.h  Thread.cpp  Thread.h  WorkerGroup.cpp  WorkerGroup.h
pkgs/apps/bodytrack/src/autom4te.cache/: requests
pkgs/apps/facesim/src/Public_Library/Read_Write/: FILE_UTILITIES.cpp  FILE_UTILITIES.h
pkgs/apps/ferret/src/include/: cass.h
pkgs/apps/x264/src/common/: set.c
pkgs/kernels/dedup/src/: encoder.c
pkgs/libs/libxml2/src/autom4te.cache/: requests
pkgs/netapps/netdedup/src/server/: encoder.c
pkgs/tools/libtool/src/autom4te.cache/: requests
pkgs/tools/libtool/src/doc/: version.texi
tools/straw/: CMakeLists.txt
tools/straw/src/: args.h  main.c  utils.h
